Update help output

--- a/docs/content/references/cli/validator.mdx
+++ b/docs/content/references/cli/validator.mdx
@@ -315,7 +315,7 @@ Each command has its own help section. For example `iota validator report-valida
 
 ```shell
 $ iota validator report-validator --help
-Report or un-report a validator
+Report or un-report a validator as bad or non-performant
 
 Usage: iota validator report-validator [OPTIONS] <reportee-address>
 
