remove more debris

--- a/docs/content/references/cli/console.mdx
+++ b/docs/content/references/cli/console.mdx
@@ -38,8 +38,8 @@ Available RPC methods: ["iota_devInspectTransactionBlock", "iota_dryRunTransacti
 "iota_tryGetPastObject", "iota_tryMultiGetPastObjects", "iotax_getAllBalances", "iotax_getAllCoins", "iotax_getBalance", 
 "iotax_getCoinMetadata", "iotax_getCoins", "iotax_getCommitteeInfo", "iotax_getDynamicFieldObject", "iotax_getDynamicFields", 
 "iotax_getLatestIOTASystemState", "iotax_getOwnedObjects", "iotax_getReferenceGasPrice", "iotax_getStakes", "iotax_getStakesByIds", 
-"iotax_getTotalSupply", "iotax_getValidatorsApy", "iotax_queryEvents", "iotax_queryTransactionBlocks", "iotax_resolveNameServiceAddress", 
-"iotax_resolveNameServiceNames", "iotax_subscribeEvent", "iotax_subscribeTransaction", "unsafe_batchTransaction", "unsafe_mergeCoins", 
+"iotax_getTotalSupply", "iotax_getValidatorsApy", "iotax_queryEvents", "iotax_queryTransactionBlocks", "iotax_subscribeEvent", 
+"iotax_subscribeTransaction", "unsafe_batchTransaction", "unsafe_mergeCoins", 
 "unsafe_moveCall", "unsafe_pay", "unsafe_payAllIOTA", "unsafe_payIOTA", "unsafe_publish", "unsafe_requestAddStake", 
 "unsafe_requestWithdrawStake", "unsafe_splitCoin", "unsafe_splitCoinEqual", "unsafe_transferIOTA", "unsafe_transferObject"]
 
