--- a/docs/content/developer/getting-started/get-address.mdx
+++ b/docs/content/developer/getting-started/get-address.mdx
@@ -5,6 +5,10 @@ tags:
     - cli
     - address
 ---
+import Quiz from '@site/src/components/Quiz';
+import questions from '/json/developer/getting-started/get-address.json';
+
+
 # Create an Address
 
 ## What's an Account?
@@ -122,3 +126,6 @@ the `~/.iota/iota_config/iota.keystore` file. Anyone who can access that file ca
 should not share it with anyone.
 
 :::
+
+
+<Quiz questions={questions} />
