--- a/docs/content/developer/getting-started/getting-started.mdx
+++ b/docs/content/developer/getting-started/getting-started.mdx
@@ -14,7 +14,7 @@ offering programmability on layer1, complementing [IOTA EVM](../iota-evm/introdu
 
 The guides in this section will guide you as you start your IOTA Rebased journey. We recommend that you start
 by [setting up your development environment](iota-environment.mdx), and then move on
-to [install IOTA](iota-install.mdx).
+to [install IOTA](install-iota.mdx).
 
 
 [//]: # (## GraphQL queries)
