--- a/docs/content/developer/getting-started/publish.mdx
+++ b/docs/content/developer/getting-started/publish.mdx
@@ -4,6 +4,8 @@ tags: [move, how-to, cli]
 ---
 
 import AddressPrefix from "../../_snippets/address-prefix.mdx";
+import Quiz from '@site/src/components/Quiz';
+import questions from '/json/developer/getting-started/publish.json';
 
 # Publish a Package
 
@@ -158,3 +160,6 @@ After executing the transaction, verify the status of the `Sword` object using t
 ```
 
 Congratulations! You have successfully published a package to the IOTA network and modified the blockchain state using a programmable transaction block.
+
+
+<Quiz questions={questions} />
