feat(docs): add Migrate to CoinManager
Signed-off-by: salaheldinsoliman <salaheldin_sameh@aucegypt.edu>

--- a/docs/content/developer/standards/coin-manager.mdx
+++ b/docs/content/developer/standards/coin-manager.mdx
@@ -78,6 +78,8 @@ transfer::public_transfer(cm_treasury_cap, ctx.sender());
 // Publicly share the `CoinManager` object for convenient usage by anyone interested.
 transfer::public_share_object(manager);
 ```
+For the full example module, see the [Migrating to Coin Manager Example](../../developer/iota-101/create-coin/migrate-to-coin-manager.mdx)
+
 #### With mutable metadata
 
 If the metadata object is still owned, you can take advantage of the full functionality of the `CoinManager` with mutable `Metadata`:
