feat(docs): add full examples to advanced/asset_tokenization
Signed-off-by: salaheldinsoliman <salaheldin_sameh@aucegypt.edu>

--- a/docs/content/developer/advanced/asset-tokenization.mdx
+++ b/docs/content/developer/advanced/asset-tokenization.mdx
@@ -234,6 +234,10 @@ Select a module to view its details:
                                                                                                 ): VecMap<String, String> {}
                                                                                                 ```
 
+    - `tokenized_asset` full example
+    ```move file=<rootDir>/examples/move/asset_tokenization/asset_tokenization/sources/tokenized_asset.move
+    ```
+
     </TabItem>
 
     <TabItem label="proxy" value="proxy">
@@ -331,6 +335,9 @@ Select a module to view its details:
                                                         registry: &mut Registry
                                                         ): &mut Publisher {}
                                                         ```
+    - `proxy` full example
+    ```move file=<rootDir>/examples/move/asset_tokenization/asset_tokenization/sources/proxy.move
+    ```
 
     </TabItem>
 
@@ -418,6 +425,9 @@ Select a module to view its details:
                                                             promise: BurnPromise) {
                                                             }
                                                             ```
+    - `unlock` full example
+    ```move file=<rootDir>/examples/move/asset_tokenization/asset_tokenization/sources/unlock.move
+    ```
 
     </TabItem>
 
