feat(devx): Added base docs for the IOTA wallet

--- a/docs/content/about-iota/iota-wallet/getting-started.mdx
+++ b/docs/content/about-iota/iota-wallet/getting-started.mdx
@@ -3,17 +3,18 @@
 The IOTA Wallet simplifies the management of your digital assets on the IOTA network, enabling you to:
 
 * Create IOTA accounts (addresses): Set up new addresses to receive and manage coins, tokens, and NFTs.
-* Import private keys from other wallets: Seamlessly transfer assets from other wallets using a 32 or 64 byte address.
+* Import private keys from other wallets: Seamlessly transfer assets from other wallets using a 32 or 64 byte address. (TODO REVIEW)
 * Stake and earn IOTA: Participate in the network’s security through staking and earn rewards.
 * Transfer coins and NFTs: Easily send your assets to another address with IOTA Wallet’s intuitive interface.
 * View your assets: Keep track of your coins, tokens, and NFTs all in one place.
-* For developers or users interested in exploring advanced features not available in IOTA Wallet, the IOTA Client CLI(opens in a new tab) provides a robust set of tools for deeper network interaction.
+
+For developers or users interested in exploring advanced features not available in IOTA Wallet, the IOTA Client CLI(opens in a new tab) provides a robust set of tools for deeper network interaction.
 
 ## Install IOTA Wallet
 
 IOTA Wallet’s multi-device support means you can manage your digital assets.
 
-1. Open a Chromium-based browser and go to the IOTA Wallet page(opens in a new tab) on the Chrome Web Store.
+1. Open a Chromium-based browser and go to the IOTA Wallet page(opens in a new tab) on the Chrome Web Store. (TODO ADD LINK)
 2. Click "Add to Chrome" to install the extension.
 3. Acknowledge the message about permissions for the extension, and then click "Add Extension".
 4. Once added, the IOTA Wallet icon will appear in your browser, indicating it's ready for use.
@@ -23,26 +24,26 @@ IOTA Wallet’s multi-device support means you can manage your digital assets.
 
 Whether you’re using the browser extension or mobile app, creating a new IOTA Wallet involves a similar process:
 
-1. Open IOTA Wallet, and create a new wallet and Select "Create a new Passphrase Account"
+1. Open IOTA Wallet, and create a new profile and Select "Create a new Passphrase Account"
 2. Review and accept the Terms of Service.
-3. Display and securely store your recovery phrase. This phrase is essential for wallet recovery.
-4. Confirm you've saved your recovery phrase and then access your new wallet.
+3. Display and securely store your mnemonic recovery phrase. This phrase is essential for wallet recovery.
+4. Confirm you've saved your mnemonic recovery phrase and then access your new wallet.
 
 :::danger
 
-The recovery phrase is crucial for regaining access to your wallet if you forget your password or switch devices. Without it, access to your assets is irrecoverably lost.
+The mnemonic recovery phrase is crucial for regaining access to your wallet if you forget your password or switch devices. Without it, access to your assets is irrecoverably lost.
 
 :::
 
 ## Import an Existing IOTA Wallet
 
-You can use your IOTA Wallet on multiple devices and browsers. After you create a IOTA Wallet, use the 12-word recovery phrase to import your wallet to a new browser or device.
+You can use your IOTA Wallet on multiple devices and browsers. After you create a IOTA Wallet, use the 24-word mnemonic recovery phrase to import your wallet to a new browser or device.
 
-To use your IOTA Wallet across multiple devices, import it using your recovery phrase:
+To use your IOTA Wallet across multiple devices, import it using your mnemonic recovery phrase:
 
 1. Open IOTA Wallet and select "Get Started."
 2. Click on "Import an Existing Wallet."
-3. Enter your 12-word recovery phrase.
+3. Enter your 24-word mnemonic recovery phrase.
 4. Create a new password for this device or browser.
 5. Confirm the password and complete the import process.
 6. Access your wallet with the newly set password.
