Add tooltip in the doc

--- a/docs/content/developer/iota-101/create-coin/create-review-rating-dao-with-multisig-tutorial.mdx
+++ b/docs/content/developer/iota-101/create-coin/create-review-rating-dao-with-multisig-tutorial.mdx
@@ -40,6 +40,12 @@ Reviewers are consumers of services that use the review system. Reviewers provid
 
 Review readers access reviews to make informed decisions on selecting services. Readers rate reviews by casting votes. The review readers' ratings are factored into the algorithm that rates the reviews, with the authors of the highest-rated reviews getting rewarded. Although it is not implemented as part of this guide, this example could be extended to award review readers a portion of the rewards for casting votes for reviews.
 
+:::info
+
+See how to create a [Multisig](../../cryptography/transaction-auth/multisig.mdx) transactions.
+
+:::
+
 ### Moderators
 
 Moderators is a multisig setup ensures that multiple parties must authorize significant actions, such as review removal or reward distribution, adding a layer of security and transparency. Decisions require collective agreement, further ensuring accountability within the moderation process. Moderators monitor content of the reviews and can delete any reviews that contain inappropriate content.
