--- a/docs/content/about-iota/iota-wallet/getting-started.mdx
+++ b/docs/content/about-iota/iota-wallet/getting-started.mdx
@@ -1,52 +1,82 @@
-# Getting Started
+---
+description: A guide for getting started with the IOTA Wallet, including setup, creating accounts, and importing existing wallets.
+---
 
-The IOTA Wallet simplifies the management of your digital assets on the IOTA network, enabling you to:
+# Getting Started with the IOTA Wallet
 
-* Create IOTA accounts (addresses): Set up new addresses to receive and manage coins, tokens, and NFTs.
-* Import private keys from other wallets: Seamlessly transfer assets from other wallets using a 32 or 64 byte address. (TODO REVIEW)
-* Stake and earn IOTA: Participate in the network’s security through staking and earn rewards.
-* Transfer coins and NFTs: Easily send your assets to another address with IOTA Wallet’s intuitive interface.
-* View your assets: Keep track of your coins, tokens, and NFTs all in one place.
+The IOTA Wallet offers an easy-to-use platform for managing your digital assets on the IOTA network.
 
-For developers or users interested in exploring advanced features not available in IOTA Wallet, the IOTA Client CLI(opens in a new tab) provides a robust set of tools for deeper network interaction.
+* **Set up IOTA profiles and accounts**:  
+Create new addresses to handle coins, tokens, and NFTs.
+* **Import private keys:** Transfer assets seamlessly from other wallets using a 32 or 64-byte address. (TODO CONFIRM)
+* **Stake and earn IOTA:** Secure the network through staking while earning rewards.
+* **Transfer assets:** Send coins and NFTs easily to another address with a user-friendly interface.
+* **Monitor your assets:** View your coins, tokens, and NFTs in one place for a complete overview.
 
 ## Install IOTA Wallet
 
-IOTA Wallet’s multi-device support means you can manage your digital assets.
+## Installing the IOTA Wallet
 
-1. Open a Chromium-based browser and go to the IOTA Wallet page(opens in a new tab) on the Chrome Web Store. (TODO ADD LINK)
-2. Click "Add to Chrome" to install the extension.
-3. Acknowledge the message about permissions for the extension, and then click "Add Extension".
-4. Once added, the IOTA Wallet icon will appear in your browser, indicating it's ready for use.
-5. To complete the setup process, proceed to "Create a New Wallet""
+1. Open a Chromium-based browser and visit the [IOTA Wallet page](#TODO ADD LINK) in the Chrome Web Store.
+2. Click the **Add to Chrome** button to install the wallet extension.
+3. Approve the permissions for the extension and confirm by selecting **Add Extension**.
+4. Once installed, you’ll see the IOTA Wallet icon in your browser, signaling that it's ready for use.
+5. To finalize the setup, proceed to create your new wallet.
 
-## Create a new wallet
+## Creating a New Wallet
 
-Whether you’re using the browser extension or mobile app, creating a new IOTA Wallet involves a similar process:
+1. Open IOTA Wallet, create a new profile by clicking `Add Profile`.
 
-1. Open IOTA Wallet, and create a new profile and Select "Create a new Passphrase Account"
-2. Review and accept the Terms of Service.
-3. Display and securely store your mnemonic recovery phrase. This phrase is essential for wallet recovery.
-4. Confirm you've saved your mnemonic recovery phrase and then access your new wallet.
+    ![Add Profile](/img/about-iota/iota-wallet/getting-started/add-profile.png)
 
-:::danger
+2. Choose **Create a New Mnemonic Profile**.
 
-The mnemonic recovery phrase is crucial for regaining access to your wallet if you forget your password or switch devices. Without it, access to your assets is irrecoverably lost.
+   ![Create Mnemonic Profile](/img/about-iota/iota-wallet/getting-started/create-mnemonic-profile.png)
+
+
+3. Enter your desired password.
+
+    ![Create Password](/img/about-iota/iota-wallet/getting-started/create-password.png)
+
+4. Carefully read and accept the Terms of Service, and click `Create Wallet`.
+   
+    ![Create Wallet](/img/about-iota/iota-wallet/getting-started/create-wallet.png)
+
+5. Copy and securely save your recovery phrase (mnemonic). This phrase is crucial for recovering your wallet in the future.
+6. Confirm that you have saved your mnemonic phrase, and then access your newly created wallet by clicking `Open Wallet`.
+
+
+:::danger Irrecoverable
+
+Your mnemonic recovery phrase is essential for regaining access to your wallet if you forget your password or switch devices. If lost, access to your assets cannot be recovered.
 
 :::
 
-## Import an Existing IOTA Wallet
+## Importing an Existing Wallet
 
-You can use your IOTA Wallet on multiple devices and browsers. After you create a IOTA Wallet, use the 24-word mnemonic recovery phrase to import your wallet to a new browser or device.
+To use your IOTA Wallet on different devices or browsers, you can import it using your 24-word mnemonic recovery phrase:
 
-To use your IOTA Wallet across multiple devices, import it using your mnemonic recovery phrase:
+1. Open IOTA Wallet and select `Add Profile`
 
-1. Open IOTA Wallet and select "Get Started."
-2. Click on "Import an Existing Wallet."
-3. Enter your 24-word mnemonic recovery phrase.
-4. Create a new password for this device or browser.
-5. Confirm the password and complete the import process.
-6. Access your wallet with the newly set password.
+   ![Add Profile](/img/about-iota/iota-wallet/getting-started/add-profile.png)
 
-By following these updated instructions, you can enjoy the full capabilities of IOTA Wallet across all your devices, ensuring a seamless experience as you manage, stake, and transact with your digital assets on the IOTA network.
+2. Click the `Mnemonic` button in the `Import` section.
+
+   ![Import Mnemonic](/img/about-iota/iota-wallet/getting-started/click-import-mnemonic.png)
+
+3. Enter your 24-word mnemonic recovery phrase and click `Add Profile`.
+
+
+   ![Add Profile](/img/about-iota/iota-wallet/getting-started/mnemonic.png)
+
+4. Enter your desired password.
+
+   ![Create Password](/img/about-iota/iota-wallet/getting-started/create-password.png)
+
+5. Carefully read and accept the Terms of Service, and click `Create Wallet`.
+ 
+   ![Create Wallet](/img/about-iota/iota-wallet/getting-started/create-wallet.png)
+
+By following these steps, you can manage, stake,
+and transfer your digital assets on the IOTA network from any of your devices, ensuring a seamless experience.
 
