feat(devx): Add pics to how to guide

--- a/docs/content/about-iota/iota-wallet/tutorials.mdx
+++ b/docs/content/about-iota/iota-wallet/tutorials.mdx
@@ -1,69 +1,103 @@
-# Tutorials
+# How-to Guides
 
-## Viewing IOTA Wallet Details
+## View IOTA Wallet Details
+
 To access details about your IOTA Wallet, such as the wallet version, current network, and installed version, click the settings icon (gear symbol) located at the top-right corner of the IOTA Wallet.
 
-## Viewing Your Wallet Balance
+## View Your Wallet Balance
+
 To see your wallet balance and the list of coins and tokens it holds:
 
-1. Navigate to the "Home" tab.
+1. Navigate to the `Home` tab.
 2. Your IOTA balance is displayed prominently, along with any other coins you possess listed below.
 
-## Sending Coins
+   ![Home Tab](/img/about-iota/iota-wallet/guides/home-tab.png)
+
+## Send Coins
+
 To send coins to another address:
 
-1. Go to the "Home" tab and select "Send" directly below your IOTA Balance.
-2. Select the Coin you want to send.
+1. Go to the `Home` tab and select the `Send` icon beside your [IOTA Balance](#view-your-wallet-balance).
+2. Select the Coin you want to send from the dropdown.
 3. Enter the amount of the coin you wish to send.
-4. Input the recipient's address and confirm by clicking "Review."
-5. Click "Send Now ->" once you’ve confirmed the details are correct.
+4. Input the recipient's address and confirm by clicking `Review`.
 
-## Viewing Recent Transaction Details
-Your recent transactions, including sends and receives, are listed under the "Activity" tab. Click on a transaction to see more details.
+   ![Review](/img/about-iota/iota-wallet/guides/send-review.png)
 
-## Viewing and Managing Your NFTs
+5. Click `Send Now ->` once you’ve confirmed the details are correct.
+
+   ![Send Review](/img/about-iota/iota-wallet/guides/send-now.png)
+
+## View Recent Transaction Details
+
+1. Click on the `Activity` tab on the bottom left to view your activity history. 
+
+    ![Review activity](/img/about-iota/iota-wallet/guides/activity.png)
+
+2. You can click on a transaction to see more details.
+
+    ![Transaction Details](/img/about-iota/iota-wallet/guides/transactions.png)
+
+## View and Manage Your NFTs (TODO MINT AND DISPLAY)
+
 To view and manage your NFTs:
 
-1. Select the "Assets" tab to see all NFTs you've minted, purchased, or received.
+1. Select the `Assets` tab to see all NFTs you've minted, purchased, or received.
 2. Click on an NFT to view more details or to send it to another address.
 
-## Sending an NFT
+## Send an NFT
 To send an NFT to another address:
 
-1. In the "Assets" tab, select the NFT you wish to send.
-2. Click "Send Asset," enter the recipient's address, and confirm by clicking "Send Asset."
+1. In the `Assets` tab, select the NFT you wish to send.
+2. Click `Send Asset`, enter the recipient's address, and confirm by clicking `Send Asset`.
 
-## Locking Your IOTA Wallet
+## Auto Lock Your IOTA Wallet
+
 For added security, you can lock your wallet:
 
-1. Click the settings icon (gear symbol) located at the top-right corner of the IOTA Wallet.
-2. Select "Auto-Lock Accounts" and set an auto-lock timer by specifying the idle time in minutes, and click "Save."
+1. Click the settings icon (gear symbol) located in the top-right corner of the IOTA Wallet.
+2. Select `Auto Lock Profile`.
+
+   ![Auto lock profile](/img/about-iota/iota-wallet/guides/autolock.png)
+
+3. Set an auto-lock timer by specifying the idle time in minutes, and click `Save`.
+
+   ![Auto lock timer](/img/about-iota/iota-wallet/guides/autolock-time.png)
 
 ## Resetting Your IOTA Wallet Password
+
 If you forget your password, it can be reset with your mnemonic recovery phrase:
 
-1. On the login screen, select "Forgot password?"
-2. Enter your 24-word mnemonic recovery phrase and click "Continue."
-3. Set a new password, confirm it, and select "Reset."
+1. On the login screen, select `Forgot password?`.
+
+   ![Forgot Password](/img/about-iota/iota-wallet/guides/forgot-password.png)
+
+2. Enter your 24-word mnemonic recovery phrase and click `Next`.
+
+   ![Enter Mnemonic](/img/about-iota/iota-wallet/guides/enter-mnemonic.png)
+
+3. Set a new password, confirm it, and select `Reset Password`.
+
+   ![New Password](/img/about-iota/iota-wallet/guides/new-password.png)
 
 
-### Viewing Connected Apps
+## View Connected Apps 
 
 To keep track of which apps you've connected your IOTA Wallet to:
 
-#### Access Active Connections:
-1. Within the "Apps" tab, switch to the "Active Connections" view to see all apps currently connected to your wallet.
+### Access Active Connections
+1. Within the `Apps` tab, switch to the `Active Connections` view to see all apps currently connected to your wallet.
 
-#### Visit App Sites:
-1. To open the website associated with a connected app, click on the app's listing followed by "View."
+### Visit App Sites
+1. To open the website associated with a connected app, click on the app's listing followed by `View`.
 
-### Disconnecting from an App
+## Disconnecting from an App
 
 You can easily disconnect your wallet from a connected app.
 
-#### Open Active Connections:
-1. Go to the "Apps" tab and select "Active Connections."
+### Open Active Connections:
+1. Go to the `Apps` tab and select `Active Connections`.
 
-#### Disconnect from App:
-1. Find the app you wish to disconnect from and click on it, then select "Disconnect."
+### Disconnect from App:
+1. Find the app you wish to disconnect from and click on it, then select `Disconnect`.
 2. Your wallet will immediately sever the connection with the app, and you'll be redirected back to the Apps tab.
