feat(devx): edit staking and add pics

--- a/docs/content/about-iota/iota-wallet/how-to/basics.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/basics.mdx
@@ -2,7 +2,7 @@
 description: A collection of how-to guides for managing and using the IOTA Wallet, including balance viewing, sending assets, and security features.
 ---
 
-# How-to Guides for IOTA Wallet
+# Basics
 
 ## View IOTA Wallet Details
 
@@ -15,7 +15,7 @@ To view the balance and assets in your IOTA Wallet:
 1. Navigate to the `Home` tab.
 2. Your IOTA balance will be displayed at the top, with a list of all other coins and tokens you own appearing below.
 
-   ![Home Tab](/img/about-iota/iota-wallet/guides/home-tab.png)
+   ![Home Tab](/img/about-iota/iota-wallet/how-to/basics/home-tab.png)
 
 ## Send Coins
 
@@ -26,11 +26,11 @@ To send IOTA or other tokens to another address, follow these steps:
 3. Enter the amount you want to transfer.
 4. Input the recipient’s address and click `Review` to confirm.
 
-   ![Review](/img/about-iota/iota-wallet/guides/send-review.png)
+   ![Review](/img/about-iota/iota-wallet/how-to/basics/send-review.png)
 
 5. Once you verify the transaction details, click `Send Now ->` to complete the transfer.
 
-   ![Send Review](/img/about-iota/iota-wallet/guides/send-now.png)
+   ![Send Review](/img/about-iota/iota-wallet/how-to/basics/send-now.png)
 
 ## View Recent Transaction Details
 
@@ -38,11 +38,11 @@ To review your transaction history:
 
 1. Click the `Activity` tab located in the lower-left corner of the wallet.
 
-   ![Review activity](/img/about-iota/iota-wallet/guides/activity.png)
+   ![Review activity](/img/about-iota/iota-wallet/how-to/basics/activity.png)
 
 2. Select a transaction to see further details about it.
 
-   ![Transaction Details](/img/about-iota/iota-wallet/guides/transactions.png)
+   ![Transaction Details](/img/about-iota/iota-wallet/how-to/basics/transactions.png)
 
 ## View and Manage Your NFTs (TODO MINT AND DISPLAY)
 
@@ -65,11 +65,11 @@ For added security, you can set your wallet to automatically lock after a specif
 1. Click the settings icon (gear symbol) in the upper-right corner of your wallet.
 2. Choose the `Auto Lock Profile` option.
 
-   ![Auto lock profile](/img/about-iota/iota-wallet/guides/autolock.png)
+   ![Auto lock profile](/img/about-iota/iota-wallet/how-to/basics/autolock.png)
 
 3. Set the desired auto-lock time by specifying the idle duration in minutes, then click `Save`.
 
-   ![Auto lock timer](/img/about-iota/iota-wallet/guides/autolock-time.png)
+   ![Auto lock timer](/img/about-iota/iota-wallet/how-to/basics/autolock-time.png)
 
 ## Reset Your IOTA Wallet Password
 
@@ -77,15 +77,15 @@ If you forget your wallet password, you can reset it using your mnemonic recover
 
 1. On the login screen, click `Forgot password?`.
 
-   ![Forgot Password](/img/about-iota/iota-wallet/guides/forgot-password.png)
+   ![Forgot Password](/img/about-iota/iota-wallet/how-to/basics/forgot-password.png)
 
 2. Enter your 24-word mnemonic recovery phrase and click `Next`.
 
-   ![Enter Mnemonic](/img/about-iota/iota-wallet/guides/enter-mnemonic.png)
+   ![Enter Mnemonic](/img/about-iota/iota-wallet/how-to/basics/enter-mnemonic.png)
 
 3. Create and confirm your new password, then click `Reset Password`.
 
-   ![New Password](/img/about-iota/iota-wallet/guides/new-password.png)
+   ![New Password](/img/about-iota/iota-wallet/how-to/basics/new-password.png)
 
 ## View Connected Apps
 
@@ -99,7 +99,7 @@ To manage the apps connected to your IOTA Wallet:
 
 1. Click on an app from the list and select `View` to open the associated app's website.
 
-## Disconnect from an App
+## Disconnecting from an App
 
 To disconnect your wallet from an app:
 
