--- a/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
@@ -1,12 +1,10 @@
-# Managing Multiple Accounts in IOTA Wallet
+# Managr Multiple Accounts in IOTA Wallet
 
 IOTA Wallet allows the use of multiple accounts, providing flexibility and ease in managing different assets or transaction purposes.
 
 ## Adding Another Account Address
 
-### Browser Extension
-
-The browser extension offers two ways to create and use multiple accounts in IOTA Wallet.
+The IOTA Wallet offers two ways to create and use multiple accounts in IOTA Wallet.
 
 **Option 1:**
 1. Navigate to "Accounts" at the top of the "Home" tab and select "Add."
@@ -19,7 +17,6 @@ The browser extension offers two ways to create and use multiple accounts in IOT
 
 ## Importing an Account
 
-### Browser Extension
 1. Navigate to "Accounts" at the top of the "Home" tab and select "Add."
 2. Click "Import Passphrase" or "Import Private Key."
 3. Enter or paste the private key or passphrase for the account to import, then click "Add Account."
@@ -29,9 +26,12 @@ The browser extension offers two ways to create and use multiple accounts in IOT
 
 Exporting a private key allows you to use the account with other wallet providers. Handle private keys with utmost care to prevent unauthorized access to your assets.
 
-> **Important Note:** To view the private key, make sure that no one can see your screen, and then click the crossed-out eye icon in the bottom right corner.
+:::danger
 
-### Browser Extension
+To view the private key, make sure that no one can see your screen, and then click the crossed-out eye icon in the bottom right corner.
+
+:::
+
 1. Navigate to "Accounts" at the top of the "Home" tab and click "Manage."
 2. Click "Export Private Key" for the account you want to export the key from.
 3. Enter your wallet password, then click "Verify."
