--- a/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
@@ -1,39 +1,95 @@
-# Managr Multiple Accounts in IOTA Wallet
+---
+description: A guide to managing multiple profiles and accounts in IOTA Wallet, including adding, importing, and exporting accounts.
+---
 
-IOTA Wallet allows the use of multiple accounts, providing flexibility and ease in managing different assets or transaction purposes.
+# Manage Profiles and Accounts
 
-## Adding Another Account Address
+IOTA Wallet allows you to use multiple profiles and accounts, offering flexibility in managing various assets or purposes for transactions.
 
-The IOTA Wallet offers two ways to create and use multiple accounts in IOTA Wallet.
+:::tip Profiles vs. Accounts
 
-**Option 1:**
-1. Navigate to "Accounts" at the top of the "Home" tab and select "Add."
-2. Select whether you want to create a new account or import an existing account.
-
-**Option 2:**
-1. Navigate to "Accounts" at the top of the "Home" tab and select "Manage."
-2. Select "New" in the top right corner.
-3. The wallet displays the new account. To use the new account, select it from the drop-down list on the Coins tab, or select the address when you connect the wallet to a site or app.
-
-## Importing an Account
-
-1. Navigate to "Accounts" at the top of the "Home" tab and select "Add."
-2. Click "Import Passphrase" or "Import Private Key."
-3. Enter or paste the private key or passphrase for the account to import, then click "Add Account."
-4. Enter your wallet password and then click "Verify."
-
-## Exporting the Private Key for an Account
-
-Exporting a private key allows you to use the account with other wallet providers. Handle private keys with utmost care to prevent unauthorized access to your assets.
-
-:::danger
-
-To view the private key, make sure that no one can see your screen, and then click the crossed-out eye icon in the bottom right corner.
+A profile is a collection of accounts that share the same wallet password.
 
 :::
 
-1. Navigate to "Accounts" at the top of the "Home" tab and click "Manage."
-2. Click "Export Private Key" for the account you want to export the key from.
-3. Enter your wallet password, then click "Verify."
-4. Click "Copy" to copy the private key to your clipboard.
+## Add Another Account Address
 
+You can create and use multiple accounts within the IOTA Wallet in two ways.
+
+### Add a Profile
+
+1. Go to `Accounts` by clicking on the address at the top of the `Home` section.
+
+   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
+
+2. Click `Add Profile`.
+
+   ![Add Profile](/img/about-iota/iota-wallet/how-to/multi-account/click-add-profile.png)
+
+3. Choose to either create a new account or import an existing account.
+
+   ![Select Profile Type](/img/about-iota/iota-wallet/how-to/multi-account/select-profile-type.png)
+
+### Add Another Mnemonic Account
+
+1. Navigate to `Accounts` at the top of the `Home` tab and select `Manage`.
+
+   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
+
+2. Click the `+` icon next to the account type you want to add.
+
+   ![Click plus icon](/img/about-iota/iota-wallet/how-to/multi-account/click-plus-icon.png)
+
+3. Your new account will appear. To use it, select it from the drop-down list on the Coins tab, or choose the address when connecting your wallet to a site or app.
+
+   ![Select account from dropdown](/img/about-iota/iota-wallet/how-to/multi-account/select-account-from-dropdown.png)
+
+## Import a Profile
+
+To import an existing profile into your IOTA Wallet:
+
+1. Navigate to `Accounts` at the top of the `Home` tab.
+
+   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
+
+2. Click `Add Profile`.
+
+   ![Add Profile](/img/about-iota/iota-wallet/how-to/multi-account/click-add-profile.png)
+
+3. From the `Import` section, select `Mnemonic`, `Private Key`, or `Seed`.
+
+   ![Select Profile Type](/img/about-iota/iota-wallet/how-to/multi-account/select-profile-type.png)
+
+4. Enter or paste the private key, mnemonic, or seed for the account you want to import, then click `Add Profile`.
+
+   ![Import Mnemonic](/img/about-iota/iota-wallet/how-to/multi-account/import-mnemonic.png)
+
+5. Enter your wallet password and click `Verify`.
+
+   ![Verify](/img/about-iota/iota-wallet/how-to/multi-account/verify.png)
+
+## Export a Private Key for an Account
+
+Exporting a private key allows you to use the account with other wallet providers. Handle private keys with extreme caution to prevent unauthorized access to your assets.
+
+:::danger
+
+When viewing the private key, ensure no one can see your screen. Click the crossed-out eye icon in the bottom-right corner to reveal the key.
+
+:::
+
+1. Go to `Accounts` at the top of the `Home` tab.
+
+   ![Accounts](/img/about-iota/iota-wallet/how-to/multi-account/navigate-to-accounts.png)
+
+2. Select the account you want to export, click on the `...` icon, and choose `Export Private Key` from the dropdown.
+
+   ![Export Private Key](/img/about-iota/iota-wallet/how-to/multi-account/export-private-key.png)
+
+3. Enter your wallet password and click `Verify`.
+
+   ![Verify](/img/about-iota/iota-wallet/how-to/multi-account/verify.png)
+
+4. Click `Copy` to copy the private key to your clipboard.
+
+   ![Copy](/img/about-iota/iota-wallet/how-to/multi-account/click-copy.png)
